# NamedEntityFinder

./: README.md  ner_client.py  pyproject.toml  setup.py
test/: test_api.py  test_doubles.py  test_index_e2e.py  test_ner_client.py
