[tool.poetry]
name = "namedentity"
version = "0.1.0"
description = "Named Entity Finder uses SpaCy Machine Learning engine to discover entities in sentences"
authors = ["Fredrick Ojure <fredojure@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
